# professor-x-AGI

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SPEC.md  LICENSE  MASTER_BRIEF.md  MEMORY_ARCHITECTURE.md  README.md  REEL-PLAN.md  REEL-SCRIPTS-2.md  REEL-SCRIPTS-3.md  REEL-SCRIPTS.md  RELAY.md  SECURITY.md  df_output.txt  px-sc002-test.txt  px-sc004-regression-test.txt  px-sc005-regression-test.txt
jarvis/: Cargo.toml
jarvis/config/: hardware.toml
jarvis/skills/conductor/: px-daily-update.md
jarvis/src/: main.rs
jarvis/src/agentd/: graph.rs  mod.rs  queue.rs
jarvis/src/evolved/: analyzer.rs  mod.rs  proposer.rs  reflector.rs  tracker.rs
jarvis/src/memd/: episodic.rs  mod.rs  pinned.rs  procedural.rs  semantic.rs  working.rs
jarvis/src/policyd/: audit.rs  gating.rs  mod.rs  permissions.rs  vault.rs
jarvis/src/toolbridge/: executor.rs  mod.rs  registry.rs  skill_loader.rs
professor-x/: .gitignore  .mcp.json.example  AGENTS.md  CLAUDE_TASK.md  CODEX_TASK.md  CODEX_TASK_P3.md  CODEX_TASK_P4_DISTILL.md  Cargo.toml  MILESTONE.md  NEXT_STEPS.md  PLAN_11_10.md  README.md  experiment_plan.md  install.sh  prof-x-stream.py  px-dashboard.py  run_experiment.sh  watch-prof-x.sh
professor-x/artifacts/: literature-search-results.json
professor-x/artifacts/events/: 2026-05-26.jsonl  2026-06-01.jsonl  2026-06-02.jsonl  2026-06-03.jsonl  2026-06-04.jsonl  2026-06-05.jsonl  2026-06-09.jsonl  2026-06-10.jsonl
professor-x/artifacts/repo-fix/: failure-taxonomy-2026-06-22.json
professor-x/benchmark/: hiro.rs
professor-x/brain/: STUB.md  experiment_plan.md  experiment_results.md  hypotheses.md  knowledge-base.md
professor-x/config/: hardware.toml
professor-x/distill/: Modelfile  Modelfile.tmpl  POST_REBOOT.md  README.md  baseline_native.txt  baseline_prereboot.md  build_frontier_manifest.py  check_stop_sanity.py  check_weights_finite.py  curate.py  dash.py  dash.sh  gen_fixtures.py  llama.cpp  merge_fp16.py  merge_only.py  repo_fix_artifact_to_manifest.py  run_after_reboot.sh  train_qlora.py  watch.sh
professor-x/distill/data/: curated.jsonl  frontier_weighted_p3.jsonl  frontier_wrong_edit_p3.json  frontier_wrong_edit_p3_curated.preview.jsonl  frontier_wrong_edit_p3_noncsv.json  frontier_wrong_edit_p3_noncsv_curated.preview.jsonl  frontier_wrong_edit_p3_noncsv_retry.json
professor-x/docs/: PLAN_2026-06-21.md  PLAN_DISTILLATION_2026-06-23.md  PLAN_PARALLEL_2026-06-23.md  PLAN_PHASE3_2026-06-22.md  PROJECT_ATLAS.md  WORKFLOW.md  backlog.md
professor-x/docs/research/: 2026-06-05-consciousness-measurement-program.md  2026-06-06-indicator-property-audit.md  2026-06-06-jcode-vs-professor-x-gap-analysis.md  2026-06-10-frankenstein-harness-master-plan.md  2026-06-10-react-synthesis-guard-measurement.md  2026-06-17-distillation-recipe-literature.md  2026-06-18-memd-keep-prune-map.md  2026-06-18-unified-loop-design.md  2026-06-20-IMPLEMENTATION-PLAN.md  2026-06-20-INVENTION-active-inference-self-improvement.md  2026-06-20-MASTER-research-index.md  2026-06-20-SYNTHESIS-the-compression-gate.md  2026-06-20-ai-research-landscape.md  2026-06-20-format-unification-plan.md  2026-06-20-github-repos-to-steal.md  2026-06-20-phase1-parsecheck-result.md  2026-06-20-phase2-S2-native-result.md  2026-06-20-phase2-native-toolcalling-plan.md  2026-06-20-quantization-vector-techniques.md  2026-06-20-stage1-result.md  2026-06-20-synthesis-new-perspectives.md  2026-06-20-topics-to-explore.md  (+39 more)
professor-x/hiro/: tasks.json
professor-x/personas/: professor_x.md
professor-x/sandbox/: .gitignore
professor-x/scripts/: install_repo_skills.py  relay.py  relay_watch.sh  stranger_smoke.sh
professor-x/skills/: RetryPlanGeneration.md  px-operator-autocommit-20260527-034639.md  px-operator-autocommit-20260527-035402.md  px-operator-autocommit-20260601-082530.md
professor-x/src/: artifacts.rs  embeddings.rs  failure.rs  local_embed.rs  main.rs  observer.rs  ollama.rs  serve.rs  tui.rs  util.rs
(+1833 files in other folders)
