[package]
name = "jarvis"
version = "0.1.0"
edition = "2024"
description = "Self-evolving AI harness for autonomous operation on consumer hardware"

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full", "rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (Merkle chain)
sha2 = "0.10"

# Encryption (credential vault)
aes-gcm = "0.10"
rand = "0.8"

# HTTP client (Ollama API)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Cron scheduling
cron = "0.12"


# URL parsing (policyd URL validation)
url = "2"

# IP address parsing (policyd private IP check)
ipnetwork = "0.20"

# YAML parsing (SKILL.md frontmatter)
serde_yaml = "0.9"

# Regex (diff pattern parsing)
regex = "1"

# Shell path expansion (~/ → /home/user/)
shellexpand = "3"

# hex encoding (Merkle chain)
hex = "0.4"

# FAISS (vector search) — CPU-only via faiss crate
# NOTE: requires faiss C library. Falls back to brute-force cosine if unavailable.
# faiss = { version = "0.1", optional = true }

# ONNX runtime for all-MiniLM-L6-v2 embeddings — CPU only
# ort = { version = "2", features = ["load-dynamic"], optional = true }

[features]
default = []
embeddings = []  # enables ort + faiss when system libs available

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
